# OpenGLEngine

./: .gitignore  CMakeLists.txt  Camera.hpp  Matrix.hpp  README.md  Vector.hpp  coverage.sh  main.cpp  tests.cpp
resources/shaders/: combined_light.fs  combined_light.vs  deferred_shading.fs  directional_lighting.fs  g_buffer.fs  g_buffer.vs  lighting.fs  point_lighting.fs  skybox.fs  spot_lighting.fs
resources/skybox/: back.png~  top.png~
src/: Camera.hpp  LightSource.hpp  Material.hpp  Matrix.hpp  Mesh.hpp  Model.hpp  Texture.hpp  Vector.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp  main.cpp
src/ECS/: Camera.hpp  GameObject.hpp  GameObjectManager.hpp  InputEvent.hpp  InputManager.hpp  Window.hpp  WindowSettings.hpp
src/ECS/Component/: IComponent.hpp  Material.hpp  Shader.hpp  Texture.hpp
src/ECS/System/: ISystem.hpp  ShaderSystem.hpp  SkyboxTextureSystem.hpp  TextureSystem.hpp
src/ECS/Utils/: Mesh.hpp  Shader.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
src/ECS/Window/: Window.hpp  WindowSettings.hpp
src/ECS/inprogress/: Model.hpp
src/Math/: Vector.hpp
src/Utils/: LightningShaderFiller.hpp
src/utils/: LightningShaderFiller.hpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp
tests/: tests.cpp
utils/: Shader.hpp  shaderLoader.cpp  shaderLoader.hpp
